@@ -14,6 +14,7 @@ Version 1.1.8 work in progress
 - Bug #2303: Fixed not logging anything on WSDL service failure (Sam Dark)
 - Bug #2328: Fixed the bug that table names was not quoted in CDbAuthManager (mdomba)
 - Bug #2338: Fixed a typo in the client validation code for CNumberValidator (Qiang)
+- Bug #2382: Fixed the bug that yiic wasn't able to run if there is no commands dir in application (Sam Dark)
 - Bug #2394: Fixed a typo in CDbCache that may cause mget() to fail (Qiang)
 - Bug #2409: Fixed the bug that CCaptcha::buttonOptions is not respected (Qiang)
 - Bug #2411: Fixed the bug that CCaptcha will fail when setting buttonType to be 'button' (Qiang)
